--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+.container {
+  position: relative;
+  background: rgb(253, 253, 253);
+  background: linear-gradient(
+    90deg,
+    rgba(253, 253, 253, 1) 0%,
+    rgba(253, 251, 252, 1) 59%,
+    rgba(239, 239, 239, 1) 100%
+  );
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bg-bottom {
+  width: 100%;
+  height: 500px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-size: contain;
+  background-position: bottom right;
+  background-image: url("/public/top-view-chinese-lunar-new-year-background-copy-space-design-concept-with-white-plum-flower-festive-decoration-word-inside-picture-means-blessing_315337-6724.avif");
+  background-repeat: no-repeat;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cover {
+  z-index: 10;
+  font-family: arial black;
+  background-image: linear-gradient(
+    to right,
+    red,
+    orange,
+    yellow,
+    green,
+    blue,
+    indigo,
+    violet,
+    red
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: rainbow-animation 1000s linear infinite;
+  font-size: "16px";
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.style-time {
+  font-size: 32px;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+@keyframes rainbow-animation {
   to {
-    transform: rotate(360deg);
+    background-position: 4500vh;
   }
 }
